# GRA-DMLab---Space-weather-Prediction

./: CMakeLists.txt  README.md  check.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  make.bat
docs/_src/: conf.py  edgedetction.rst  imageparam.rst  imageparam.util.rst  index.rst  swdatatoolkit.rst
py_src/datasources/: __init__.py  _constants.py  harpdownloader.py
py_src/swdatatoolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py_src/swdatatoolkit/edgedetection/: __init__.py
py_src/swdatatoolkit/imageparam/: __init__.py  _constants.py  _param_calculators.py  util.py
tests/edgedetection/: test_gradient.py
tests/imageparam/: test_imageparam.py  test_util.py
