[metadata]
name = swdatatoolkit
provides = swdatatoolkit
description = "Space Weather Toolkit: A Python Toolkit for Space Weather Data Analytics"
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
author = Dustin Kempton
author_email = dkempton1@gsu.edu
license = GPL-3.0-or-later
license_file = LICENSE.txt
url = https://bitbucket.org/gsudmlab/spaceweather_toolkit
platform = any
keywords = solar, space weather, mvts, imbalance, sampling, features
# Keys & values must be chosen from: https://pypi.org/classifiers/
# # 1 - Planning, 2 - Pre-Alpha, 3 - Alpha, 4 - Beta, 5 - Production/Stable
classifiers =
        Development Status :: 1 - Planning
        Intended Audience :: Science/Research
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Information Analysis
project_urls =
        Documentation = https://dmlab.cs.gsu.edu/docs/spaceweather_toolkit/,
        Source = https://bitbucket.org/gsudmlab/spaceweather_toolkit,



[options]
zip_safe = False
python_requires = >=3.8
install_requires =
    sunpy>=3.1.0
    pandas>=1.3.4
    numpy>=1.17.0
    scipy>=1.3.0

[options.extras_require]
test = pytest>=5.4

[tool.pytest.ini_options]
minversion = 6.0
addopts =
    -ra
    --showlocals
    --strict-markers
    --strict-config
testpaths =
    tests
python_files =
    test_*.py
    *_test.py
    tests.py